--- a/back_end/mongoconnect/src/main/resources/application.properties
+++ b/back_end/mongoconnect/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port = 3128
 spring.data.mongodb.uri=mongodb://localhost/
 spring.data.mongodb.database=SmartVote
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = smartvoteservicesltd@gmail.com
+spring.mail.password = bhcfiptnadblxaec
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
