--- a/back_end/mongoconnect/src/main/resources/application.properties
+++ b/back_end/mongoconnect/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.data.mongodb.database=SmartVote
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username = smartvoteservicesltd@gmail.com
-spring.mail.password = bhcfiptnadblxaec
+spring.mail.password = insertsecretpasswordhere
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
